--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,9 @@ services:
     ports:
       - "9000:8080"
     environment:
-      AllowedHosts: ${ALLOWED_ORIGINS}
+      AllowedOrigins: ${ALLOWED_ORIGINS}
+    depends_on:
+      - consul
     restart: always
 
   auth-service:
@@ -91,7 +93,7 @@ services:
     volumes:
       - catalog_db_data:/var/lib/postgresql/data
     restart: always
-    
+
   order-service:
     build:
       context: ./services/orders/
@@ -114,7 +116,7 @@ services:
       - order-mongo
       - rabbitmq
     restart: always
-  
+
   order-db:
     image: postgres:latest
     container_name: order-db-container
@@ -126,7 +128,7 @@ services:
     volumes:
       - order_db_data:/var/lib/postgresql/data
     restart: always
-    
+
   order-mongo:
     image: mongo:latest
     container_name: order-mongo-container
@@ -137,7 +139,7 @@ services:
     volumes:
       - order_mongo_data:/data/db
     restart: always
-    
+
   payment-service:
     build:
       context: ./services/payments/
@@ -159,7 +161,7 @@ services:
       - payment-db
       - rabbitmq
     restart: always
-    
+
   payment-db:
     image: postgres:latest
     container_name: payment-db-container
@@ -182,7 +184,7 @@ services:
     volumes:
       - blob_storage_data:/data
     restart: always
-  
+
   redis:
     image: redis/redis-stack:latest
     container_name: redis-container
@@ -191,7 +193,7 @@ services:
     volumes:
       - redis_data:/data
     restart: always
-    
+
   rabbitmq:
     image: rabbitmq:4-management
     container_name: rabbitmq-container
@@ -213,7 +215,7 @@ services:
     volumes:
       - ./gateway/Gateway/Consul:/consul/config
     restart: always
-    
+
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus-container
@@ -223,7 +225,7 @@ services:
       - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
     restart: always
-    
+
   grafana:
     image: grafana/grafana:latest
     container_name: grafana-container
