--- a/gateway/Gateway/appsettings.json
+++ b/gateway/Gateway/appsettings.json
@@ -1,3 +1,7 @@
 ﻿{
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AllowedOrigins": [
+    "http://localhost:5173",
+    "http://localhost:3000"
+  ]
 }
